# wasmr

./: .gitignore  CLAUDE.md  Cargo.toml  OPERATOR_PRECEDENCE.md  TYPE_INFERENCE_ANALYSIS.md  WASM_BUILD.md  measure_compile_time.sh  presentation.tex  run_benchmarks.sh  runtime.wasm  test.sh  test_cast.R  test_lexer_mod.rs  test_logical_comparison.R  test_logical_comprehensive.R  test_vec_add.R  test_vec_append.R  test_vector_scalar_comparison.R  test_vector_scalar_simple.R  thesis.md  thesis.tex  thesis_sections.tex  translate_and_test.sh
.claude/: settings.json
benchmarks/: 1_double_sum.R  1_integer_sum.R  2_vector_addition.R  3_fibonacci.R  4_nested_loops.R  5_closure_creation.R
data/: add.R  add_function_with_extra_var.R  basic_if_else.R  basic_loop.R  bla.R  closure.R  closure_simple.R  comparison_examples.R  function.R  function_parent_scope_var.R  index_assign.R  math.R  runtime.R  simple_index.R  test_boolean.R  test_double_print.R  test_length.R  test_newline.R  test_operator_precedence.R  test_runtime.R  test_very_simple.R  vector.R
data_R/: README.md  add_function_with_extra_var.R  basic_if_else.R  basic_loop.R  boolean.R  closure.R  closure_simple.R  comparison.R  first_class_function.R  function.R  function_parent_scope_var.R  math.R  print_test.R  super_assign.R  super_assign_nested.R  test_double_print.R  test_float_print.R  transitive_capture_test.R  while.R
runtime_embed/: numeric_ops.R  statistics_ops.R  utility_ops.R  vector_builtin.R  vector_ops.R  vector_ops_simple.R  vectors.wat
src/: ast.rs  codegen.rs  codegen_builtins.rs  ir.rs  lexer.rs  (+6 more)
(+213 files in other folders)
